# wrapper-small-pot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.wasm-pack  README.md  build.sh  compose.yaml
.cargo/: config
src/: lib.rs  main.rs  wasm.rs
wasm/: index.html  wasm-worker.js
