[package]
name = "wrapper-small-pot"
version = "0.1.0"
authors = ["Nico Serrano"]
edition = "2021"
description = "Small Powers of Tau Rust code wrapper to be used in browsers for participants' contributions"
repository = "https://github.com/zkparty/small-powers-of-tau"
license = "ISC"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ark-serialize = { version = "0.3" }
eyre = "0.6.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.48"
small-powers-of-tau = { git = "https://github.com/crate-crypto/small-powers-of-tau" }

[target."wasm32-unknown-unknown".dependencies]
js-sys = { version = "0.3.58"}
wasm-bindgen = "0.2.74"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
